# rca-hw-54

./: README.md  pyproject.toml  requirements.txt
app/: main.py
static/: code.js  style.css
templates/: index.html
