[tool.poetry]
name = "rioran"
version = "0.1.0"
description = ""
authors = ["KD3821 <devsboom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
pydantic = "2.9.2"
jinja2 = "3.1.4"
uvicorn = {extras = ["standard"], version = "^0.32.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
